<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.brcolow.vulkan</groupId>
    <artifactId>vulkan</artifactId>
    <packaging>jar</packaging>
    <version>0.0.1-SNAPSHOT</version>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <environmentVariables>
                        <PATH>C:\Program Files\Java\jdk-17-panama\bin</PATH>
                    </environmentVariables>
                    <executable>java</executable>
                    <arguments>
                        <argument>--add-modules</argument>
                        <argument>jdk.incubator.foreign</argument>
                        <argument>--enable-native-access=com.brcolow.vulkan</argument>
                        <argument>--module-path</argument>
                        <modulepath/>
                        <argument>--module</argument>
                        <argument>com.brcolow.vulkan/com.brcolow.game.Vulkan</argument>
                    </arguments>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <name>vulkan</name>

    <scm>
        <connection>scm:git:https://github.com/brcolow/java-vulkan.git</connection>
        <url>http://github.com/brcolow/java-vulkan</url>
        <developerConnection>scm:git:https://github.com/brcolow/java-vulkan.git</developerConnection>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>